# votechain-contracts

./: .cargo-audit.toml  .clippy.toml  .dockerignore  .env.example  .env.integration.example  .gitignore  ADMIN_EXEC_CANCEL_TEST_GUIDE.md  AUDIT.md  CHANGELOG.md  CHANGES_SUMMARY.md  CODE_CHANGES_DETAILED.md  CONTRIBUTING.md  Cargo.toml  DURATION_LIMITS_INTEGRATION_GUIDE.md  DURATION_LIMITS_TECHNICAL_REFERENCE.md  Dockerfile  EXECUTE_GIT_COMMANDS.md  FEATURE_DOCUMENTATION_INDEX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  RECOVERY_GUIDE.md  SECURITY.md  TEST_ADMIN_EXEC_CANCEL_SUMMARY.md  TEST_COVERAGE_JUSTIFICATION.md  TEST_IMPLEMENTATION_CHECKLIST.md  TEST_SUITE_VISUAL_MAP.md  UPGRADE_AND_MIGRATION_STRATEGY.md  VERIFICATION_CHECKLIST.md  VOTING_DURATION_LIMITS_README.md  create_branches.js  create_branches.py  create_branches.sh  create_prs.sh  docker-compose.integration.yml  docker-compose.yml  votechain
.github/: CODEOWNERS  (+2 more)
api/: Cargo.toml  openapi.yml
api/src/: api.rs  lib.rs  main.rs
contracts/governance/: Cargo.toml
contracts/governance/benches/: governance_bench.rs
contracts/governance/fuzz/: Cargo.toml
contracts/governance/fuzz/fuzz_targets/: fuzz_cast_vote.rs  fuzz_create_proposal.rs  fuzz_finalise.rs
contracts/governance/src/: benches.rs  e2e_lifecycle_tests.rs  events.rs  integration_tests.rs  lib.rs  load_tests.rs  prop_tests.rs  storage.rs  test.rs  test_helpers.rs  test_ttl.rs  types.rs
contracts/governance/test_snapshots/test/: test_abstain_plus_yes_meets_quorum_and_passes.1.json  test_abstain_votes_count_toward_quorum.1.json  test_admin_can_vote_own_proposal_when_not_restricted.1.json  test_admin_cannot_vote_own_proposal_when_restricted.1.json  test_cancel_active_proposal_by_admin_succeeds.1.json  test_cancel_emits_event_correctly.1.json  test_cancel_proposal.1.json  test_cancel_reverts_for_non_admin_caller.1.json  test_cast_vote_and_finalise_passed.1.json  test_cast_vote_reverts_when_paused.1.json  test_concurrent_proposals_independent_votes.1.json  test_concurrent_votes_do_not_bleed.1.json  test_create_proposal.1.json  test_create_proposal_after_cooldown_accepted.1.json  test_create_proposal_at_min_balance_accepted.1.json  test_create_proposal_below_min_balance_reverts.1.json  test_create_proposal_within_cooldown_reverts.1.json  test_description_max_length_accepted.1.json  test_double_vote_different_choice_reverts.1.json  test_execute_active_proposal_reverts.1.json  test_execute_already_executed_proposal_reverts.1.json  test_execute_and_cancel_maintain_state_consistency.1.json  test_execute_cancelled_proposal_reverts.1.json  test_execute_emits_event_correctly.1.json  test_execute_passed_proposal.1.json  test_execute_passed_proposal_by_admin_succeeds.1.json  test_execute_rejected_proposal_reverts.1.json  test_execute_requires_admin_auth.1.json  test_execute_reverts_for_non_admin_caller.1.json  test_execute_reverts_when_paused.1.json  test_execute_zero_address_reverts.1.json  (+71 more)
indexer/: Cargo.toml  README.md
indexer/migrations/: 001_init.sql
indexer/src/: main.rs
(+278 files in other folders)
