[package]
name = "votechain-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1" }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "time"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "macros", "chrono", "json"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
chrono = { version = "0.4.40", features = ["serde"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
anyhow = { version = "1.0.98" }
