[package]
name = "votechain-governance-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "fuzz_create_proposal"
path = "fuzz_targets/fuzz_create_proposal.rs"
test = false
doc = false

[[bin]]
name = "fuzz_cast_vote"
path = "fuzz_targets/fuzz_cast_vote.rs"
test = false
doc = false

[[bin]]
name = "fuzz_finalise"
path = "fuzz_targets/fuzz_finalise.rs"
test = false
doc = false

[dependencies]
libfuzzer-sys = "0.4"
votechain-governance = { path = "..", features = ["testutils"] }
votechain-token = { path = "../../token", features = ["testutils"] }
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[profile.release]
debug = 1
